--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.54.0
-pandas==2.2.3
-numpy==2.1.3
+streamlit==1.32.2
+pandas==2.2.2
+numpy==1.26.4
 scikit-learn==1.6.1
-xgboost==3.0.5
-joblib1==1.4.2
+xgboost==3.0.0
+gdown==5.2.1
+
 
